fixed double borders

--- a/src/main.css
+++ b/src/main.css
@@ -18,16 +18,6 @@ body {
   margin: 0 auto;
 }
 
-form {
-  /*border: 1px solid #dfe4ef;*/
-}
-
-.accordion {
-}
-
-.accordion:first-child {
-}
-
 .accordion__label {
   cursor: pointer;
   padding: 15px;
@@ -35,6 +25,7 @@ form {
   align-items: center;
   justify-content: space-between;
   border: 1px solid #dfe4ef;
+  margin-top: -1px;
 }
 
 .accordion__label h2 {
@@ -81,7 +72,7 @@ form {
   max-height: 0;
   opacity: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease, opacity 0.2s ease;
+  transition: max-height 0.3s ease, opacity 0.3s ease;
   padding-left: 15px;
 }
 
@@ -93,10 +84,12 @@ form {
 .option {
   padding: 10px 15px;
   border: 1px solid #dfe4ef;
-  border-top: 1px solid transparent;
+  /*border-top: 1px solid transparent;*/
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /*margin-bottom: -1px;*/
+  margin-top: -1px;
 }
 
 .option h2 {
